# myairflow

./: README.md  pyproject.toml
dags/: catchup.py  hello.py  movie.py  movie2.py  movie_after.py  movie_spark.py  myetl.py  mymyetl.py  seoul.py  temp.py  virtual.py  wiki_spark.py
pyspark/: movie_meta.py
src/myairflow/: .send_notify.py.swp  func.py  myetl_function.py  send_notify.py
tests/: .test_myetl.py.swp  test_myetl.py  test_notify.py
