[project]
name = "myairflow"
version = "0.1.2"
description = "my first airflow"
authors = [
    {name = "lucas_hub12", email = "hyeonggyunbae@gmail.com"},
]
dependencies = ["requests>=2.32.3", "pandas>=2.2.3", "pyarrow>=19.0.1"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[dependency-groups]
test = [
    "pytest>=8.3.5",
]
